--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProductDetail</title>   
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4233ea3642.js" crossorigin="anonymous"></script>  
     <link rel="stylesheet" href="/css/home/navbarStyles.css">
     <link rel="stylesheet" href="/css/home/footerStyles.css">
@@ -17,62 +17,9 @@
     />
     <script type="text/javascript" src="/js/home.js"></script>  
     <link rel="stylesheet" href="/css/ProductDetailStyles.css">
-    
 </head>
 <body>
-  <header>
-    <div class="header-top">
-      <div class="container-logo">
-        <a href="/home"><img src="/images/techLand2White.png" class="tech-land-logo" alt="tech-land-logo" /></a>
-      </div>
-
-      <div class="search-box">
-        <form action="#" method="POST">
-          <input type="text" name="search" id="search" placeholder="Search for anything" required /><button type=""
-            class="button-search">
-            <i class="fab fa-searchengin fa-lg"></i>
-          </button>
-        </form>
-      </div>
-      <div class="shoppingCart">
-        <a href="/productCart"><i class="fas fa-shopping-cart fa-lg"></i></a>
-      </div>
-    </div>
-    <nav class="header-nav">
-      <ul class="service-options">
-        <li><a href="#">Novedades</a></li>
-        <li><a href="#">Productos destacados</a></li>
-        <li><a href="#">Favoritos</a></li>
-        <li><a href="#">Centro de información</a></li>
-      </ul>
-      <ul class="user-options">
-        <li>
-          <a href="/login">Log in <i class="fas fa-sign-in-alt"></i></a>
-        </li>
-        <li>
-          <a href="/register">Sign up <i class="fas fa-user-plus"></i></a>
-        </li>
-        <li>
-          <div class="search-box-mobile">
-            <form action="#" method="POST">
-              <input type="text" name="search" id="search" placeholder="Search for anything" required /><button type=""
-                class="button-search">
-                <i class="fab fa-searchengin fa-lg"></i>
-              </button>
-            </form>
-          </div>
-        </li>
-      </ul>
-      <div class="shoppingCart-mobile">
-        <a href="/productCart"><i class="fas fa-shopping-cart fa-lg"></i></a>
-      </div>
-    </nav>
-    <div class="container-barMenu">
-      <i class="fas fa-bars barMenu fa-lg"></i>
-    </div>
-    <div class="banner">
-      <img src="/images/home/banner1.jpg" alt="banner1" />
-    </div>
+      <%- include('./partials/header')%>
   </header>
 
     <main>
