--- a/src/views/products/productCreate.ejs
+++ b/src/views/products/productCreate.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%- include("partials/head") %>
+    <%- include("../partials/head") %>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       rel="stylesheet"
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <%- include('./partials/header')%> 
+      <%- include('../partials/header')%> 
     </header>
 
     <main>
@@ -103,7 +103,7 @@
       </section>
     </main>
 
-    <%- include('./partials/footer')%>
+    <%- include('../partials/footer')%>
     <!-- <footer>
         <div class="social-networks">
         <i class="fab fa-instagram fa-3x"></i>
