--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -62,6 +62,9 @@
                     </div>
 
                     <a href="/products/edit/<%= item.id %>"> XXXXXXX</a>
+                    <form action="/products/delete/<%= item.id %>?_method=DELETE" method="POST" style="display: inline-flex">
+                        <button type="submit" class="action-button delete">ELIMINAR</button>
+                    </form>
                 </div>
                 
             </main>
